fixing alignments

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ aside {
 }
 
 section, aside{
-    margin-top:1.5em;
+    margin-top:1.1em;
     border-radius: 10px;
   
 }
